--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             .tech-scroller {
 			  position: center;
 			  width: 50%;
+			  height: 10%;
+			  overflow: hidden;
 			}
 
             .tech-track {
