--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <!--
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
@@ -7,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-S6299VCP8S"></script>
@@ -81,7 +81,7 @@
                 margin-left: auto;
                 margin-right: auto;
                 max-width: 600px;
-                font-family: Roboto;
+                font-family: "Press Start 2P";
             }
 
             /* SCROLLER TOOLTIP STYLES */
@@ -134,12 +134,12 @@
 
             /* Horizontal tech scroller */
             .tech-scroller {
-            	font-family: Roboto;
+            	font-family: "Press Start 2P";
             	font-size: 0.1rem;
 				position: relative;
 				width: 70%;           /* limit visible scroll width */
-				overflow-x: hidden;   /* ⬅️ clip horizontally */
-				overflow-y: hidden;  /* ⬅️ allow vertical escape */
+				overflow-x: visible;   /* ⬅️ clip horizontally */
+				overflow-y: visible;  /* ⬅️ allow vertical escape */
 				margin: 2rem auto 4rem auto;  /* ⬅️ Add spacing above & below */
 				padding: 5rem 0;              /* ⬅️ Prevent clipping from icons/tooltips */
 			}
@@ -213,7 +213,7 @@
 		<div class="content">
 			<div class="inner">
 				<h1>Caylin John Naidoo</h1>
-				<p>+10 years building complex systems end-to-end — with a focus on scalability, maintainability, business value, and long-term strategic impact.</p>
+				<p>Software Engineer</p>
 			</div>
 		</div>
 		<nav>
