--- a/old/index.html
+++ b/old/index.html
@@ -17,7 +17,7 @@
   <!-- Google tag (gtag.js) -->
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Press Start 2P", sans-serif;
       margin: 0;
       background: #f4f7fb;
     }
