--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 -->
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-S6299VCP8S"></script>
@@ -81,7 +83,7 @@
                 margin-left: auto;
                 margin-right: auto;
                 max-width: 600px;
-                font-family: "Press Start 2P";
+                font-family: "Poppins";
             }
 
             /* SCROLLER TOOLTIP STYLES */
@@ -137,7 +139,7 @@
 
             /* Horizontal tech scroller */
             .tech-scroller {
-            	font-family: "Press Start 2P";
+            	font-family: "Poppins";
             	font-size: 0.1;
 				position: justified;
 				width: 100%;           /* limit visible scroll width */
