--- a/old/projects/project1.html
+++ b/old/projects/project1.html
@@ -42,7 +42,7 @@
           text-decoration: underline;
         }
         body {
-          font-family: "Press Start 2P", sans-serif;
+          font-family: "Poppins", sans-serif;
           background: #f4f7fb;
           margin: 0;
         }
