--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
-			/* Global layout: full height, no scrolling */
-            html, body {
-				height: 100%;
+			/* Global layout: full height, no scrolling, improved for mobile */
+			html, body {
 				margin: 0;
+				padding: 0;
+				height: 100%;
+				width: 100%;
+				overflow: hidden;
 				display: flex;
 				flex-direction: column;
-				overflow-x: hidden;
-				overflow-y: visible;
+				font-family: "Poppins", sans-serif;
 			}
 
 			#wrapper {
-				flex: 1 0 auto;
+				height: 100vh;
+				width: 100vw;
+				overflow: hidden;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
 				justify-content: flex-start;
-				padding-top: 2rem;
-				padding-left: 1rem;
-				padding-right: 1rem;
+				padding: 2rem 1rem 0;
 				box-sizing: border-box;
-				width: 100%;
-				overflow-x: visible;
 			}
 
 			#main {
@@ -64,14 +64,16 @@
 			  padding-bottom: 2rem;
 			}
 
-            /* Background image behind everything */
+            /* Background image behind everything, fills viewport, no scroll shift */
             #bg {
 				position: fixed;
 				top: 0;
 				left: 0;
-				height: 100%;
-				width: 100%;
+				height: 100vh;
+				width: 100vw;
 				z-index: -1;
+				background-size: cover;
+				background-position: center;
 			}
 
 
